[package]
name = "wee_alloc_example"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]

[dependencies.wee_alloc_bw]
path = "../wee_alloc"
default-features = false

[dependencies]
cfg-if = "0.1"

[features]
size_classes = ["wee_alloc_bw/size_classes"]
use_std = []

[lib]
crate-type = ["cdylib"]
