[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
name = "wee_alloc_test"
version = "0.1.0"

[dependencies]
rand = "0.10"
quickcheck = "1.1.0"
histo = "1.0.0"
cfg-if = "1.0.4"

[dependencies.wee_alloc_bw]
path = "../wee_alloc"
default-features = false
features = ["use_std_for_test_debugging"]

[features]
size_classes = ["wee_alloc_bw/size_classes"]
extra_assertions = ["wee_alloc_bw/extra_assertions"]
static_array_backend = ["wee_alloc_bw/static_array_backend"]
allocator_api = ["wee_alloc_bw/nightly"]
instrumentation = ["wee_alloc_bw/instrumentation"]
