[package]
authors = [
  # Provided versions up to 1.0.0 exclusive.
  #"Nick Fitzgerald <fitzgen@gmail.com>",
  #"Sergey Pepyakin <s.pepyakin@gmail.com>",
  #"Matt Howell <mjhowell@gmail.com>",
  #"Zack Pierce <zachary.pierce@gmail.com>",

  "Audrius Meskauskas <audrius.meskauskas@gmail.com"
]
categories = ["memory-management", "web-programming", "no-std", "wasm", "embedded"]
description = "wee_alloc_bw: The Wasm-Enabled, Elfin Allocator"
license = "MPL-2.0"
name = "wee_alloc_bw"
readme = "../README.md"
repository = "https://github.com/bourumir-wyngs/wee_alloc_bw"
version = "1.0.0"

[badges]
travis-ci = { repository = "rustwasm/wee_alloc" }

[features]
default = ["size_classes"]
nightly = []

# Enable extra, expensive integrity allocations.
extra_assertions = []

# Enable size classes for amortized *O(1)* small allocations.
size_classes = []

# Enable fixed-sized, OS-independent backing memory implementation
static_array_backend = ["spin"]

# This is for internal use only.
use_std_for_test_debugging = []

[dependencies]
memory_units = "0.4.0"
cfg-if = "1.0.4"

[dependencies.spin]
version = "0.10"
optional = true
default-features = false
features = ["mutex", "spin_mutex"]

[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies.libc]
default-features = false
version = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["memoryapi", "synchapi", "winbase"]
